--- a/src/components/Sticky/StickyResizeCorner/sticky-resize-corner.scss
+++ b/src/components/Sticky/StickyResizeCorner/sticky-resize-corner.scss
@@ -17,8 +17,3 @@
     border-width: 4px;
   }
 }
-
-.invisible-resize-element {
-  position: absolute;
-  height: 0.1rem;
-}
